plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cmc.aiq'
version = '0.0.1-SNAPSHOT'
description = 'AIQ'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // .env 파일 사용을 위한 라이브러리 (새로운 라이브러리로 교체)
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // 기초 설정
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // 비동기 처리를 위한 WebFlux (AI 모델 병렬 호출 시 유용합니다)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // JSONB 핸들링 (Preferences 필드 등에 사용)
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'

    // DB 및 유틸리티
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT 인증 (0.11.5 버전)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // 테스트 설정
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:0.35.0'

    // 2. OpenAI 관련 (0.35.0)
    implementation 'dev.langchain4j:langchain4j-open-ai:0.35.0'

    // 3. Gemini 관련 (0.35.0)
    implementation 'dev.langchain4j:langchain4j-google-ai-gemini:0.35.0'

    implementation 'com.google.crypto.tink:tink:1.12.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
